--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -130,11 +130,11 @@ de:
         nested_text_one: |
           Die mittels des Kontaktformulars bzw. einer Live-Chat-Funktion zur
           Verfügung gestellten personenbezogenen Daten werden wir ausschließlich
-          zur Erbringung der jeweils angefrag-ten Leistung verwenden.
+          zur Erbringung der jeweils angefragten Leistung verwenden.
         nested_title_two: "2.2 Newsletter-Anmeldung"
         nested_text_two: |
           Die mittels des Formulars zur Newsletter-Anmeldung zur Verfügung
-          gestellten personenbe-zogenen Daten werden wir nutzen, um Ihnen
+          gestellten personenbezogenen Daten werden wir nutzen, um Ihnen
           gelegentlich E-Mails mit Informationen über neue oder spezielle
           Angebote zuzusenden.
         nested_title_three: "2.3 Standortdaten"
@@ -294,7 +294,7 @@ de:
           und auf den Button klicken, werden Information über Ihr
           Benutzerverhalten (mindestens Ihre IP-Adresse und die Cookie-ID), an
           Google in die USA übermittelt und Ihrem Google-Konto zugeordnet.
-          Nähere Informati-onen zur Erhebung und Nutzung der Daten durch Google,
+          Nähere Informationen zur Erhebung und Nutzung der Daten durch Google,
           über Ihre diesbezüglichen Rechte und Möglichkeiten zum Schutz Ihrer
           Privatsphäre finden Sie in den Datenschutzhinweisen von Google+1
           (%{google}).
@@ -342,8 +342,8 @@ de:
           elektronische und organisatorische Schutzprozesse eingerichtet, die
           die von uns online erhobenen Daten schützen. Wir werden Ihre Daten
           nicht verkaufen, vermieten oder an Dritte weitergeben. Ausgenommen von
-          der vorste-henden Regelung sind unsere Dienstleistungspartner, die
-          wir zur Abwicklung unserer Leis-tungen benötigen. In diesem
+          der vorstehenden Regelung sind unsere Dienstleistungspartner, die
+          wir zur Abwicklung unserer Leistungen benötigen. In diesem
           Zusammenhang greifen wir für den Versand unseres Newsletters auf die
           Unterstützung von MailChimp/Mandrill,
           (%{mailchimp}) zurück, einem Unternehmen der The
