--- a/config/locales/views/layouts/de.yml
+++ b/config/locales/views/layouts/de.yml
@@ -15,7 +15,7 @@ de:
             besser machen können? Oder funktioniert etwas nicht richtig? Dann
           link: "schreibe uns einfach eine Nachricht."
         unavailable_location_modal: |
-          Leider finden sich auf unserer Plattform aktuell nur Vor-Ort-Angebote
+          Leider finden sich auf unserer Plattform aktuell nur Angebote vor Ort
           aus Berlin und Brandenburg. Wir hoffen aber schon bald auch in anderen
           Teilen Deutschlands aktiv zu sein. Hinterlasse uns doch bitte Deine
           E-Mail und wir werden uns einmalig bei dir melden sobald das der Fall
