--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -208,7 +208,7 @@ de:
           übersetzt. Und zwar in die Sprache, die du vorher ausgewählt hast.
           Dadurch kannst du leicht das richtige Angebot finden.
         question_four: |
-          Warum schreibt ihr immer nur zum Beispiel <i>Schüler</i> und nicht
+          > Warum schreibt ihr immer nur zum Beispiel <i>Schüler</i> und nicht
           <i>Schüler und Schülerinnen</i>?
         answer_four: |
           Bei clarat nutzen wir eine einfache Sprache. Das bedeutet auch, dass
